fixed spinner being in wrong spot, and removed scrollbar until i can figure out how to undo the new theme CSS

--- a/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
+++ b/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
@@ -75,3 +75,7 @@
 .address-item {
   white-space: nowrap;
 }
+
+p {
+    font-weight: 300;
+}
