--- a/SalonML/SalonML/src/app/core/home/shared-styles.css
+++ b/SalonML/SalonML/src/app/core/home/shared-styles.css
@@ -43,3 +43,7 @@ p {
 section {
     background-color: white;
 }
+
+::-webkit-scrollbar {
+  width: inherit;
+}
